# Whisper

./: CMakeLists.txt
assets/Whisper/XML/: Chapter00-Prologue.xml  credits.xml
include/Components/: RollingText.hpp
include/Scenes/: MenuScene.hpp
include/Systems/: TextRollerSystem.hpp
src/: main.cpp
src/Components/: RollingText.cpp
src/Scenes/: MenuScene.cpp
src/Systems/: TextRollerSystem.cpp
